--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.394.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
